--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
     <script src="app.js"></script>
 </head>
 <body>
+<label for="postcodeInput">Enter your postcode:</label>
+<input type="text" id="postcodeInput" placeholder="Enter postcode...">
+<button id="searchButton">Search</button>
+<div id="map"></div>
+<div id="results"></div>
 </body>
 </html>
